--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -103,6 +103,14 @@
     color:#ca5100;
 }
 
+.post-body h3
+{
+    color:#ca5100;
+    font-weight:bold;
+    margin:0.5em 0 0.3em 1em;
+    font-size:1.1em;
+}
+
 .post-foot
 {
    background:#68217a;
