--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1,7 +1,7 @@
 ﻿body 
 {
     background:#111111;
-    font-family: Calibri, Arial;
+    font-family: Arial;
     color:#fff;
     margin-top:45px;
     font-size:63%;
@@ -41,9 +41,9 @@
 
 .post-head
 {
-    height:22px;
+    height:1.25em;
     background:#3f3f41;
-    font-size:1em;
+    font-size:2.3em;
     font-weight:bold;
 }
 
@@ -55,14 +55,45 @@
 
 .post-head-date
 {
+    font-size:0.5em;
+    margin:0.1em 0.4em 0 0;
+    color:#ddd;
+}
+
+.post-head-comments
+{
+    font-size:0.4em;
+    margin:-1.1em 0.4em 0 0;
+    color:#ddd;
+}
+
+.post-head-comments a
+{
+    text-decoration:underline;
+    color:#2f9c49;
+}
+
+.post-head-comments a:visited
+{
+    color:#2f9c49;
+}
+
+.post-head-comments a:hover
+{
     color:#fff;
-    margin:3px 5px 0;
+}
+
+.ring
+{
+    height:0.8em;
+    margin-top:-0.1em;
 }
 
 .post-body
 {
    background:#1e1e1e;
-   font-size:90%;
+   font-size:100%;
+   line-height:130%;
    text-align:justify;
    padding:5px;
    position:relative;
@@ -107,8 +138,8 @@
 {
     color:#ca5100;
     font-weight:bold;
-    margin:0.5em 0 0.3em 1em;
-    font-size:1.1em;
+    margin:1em 0 0.3em 1em;
+    font-size:150%;
 }
 
 .post-body ul
@@ -258,17 +289,31 @@
     width: 100%;
     height: 100%;
     background: #000;
-    opacity: 0.5;
+    opacity: 0.7;
     z-index: 10;
+}
+
+#the-world-is-yours {
+    display:none;
+    position: fixed;
+    top: 100px;
+    left: 470px;
+        width: 800px;
+    height: 800px;
+    margin-left: -300px;
+    background:transparent;
+    opacity: 0.7;
+    z-index: 100;
+    text-align:justify;
 }
 
 #about {
     display:none;
     position: fixed;
-    top: 200px;
+    top: 100px;
     left: 470px;
     width: 600px;
-    height: 460px;
+    height: 600px;
     margin-left: -300px;
     background:#1e1e1e;
     opacity: 1;
@@ -298,8 +343,19 @@
 
 #about a
 {
+    color:#2f9c49;
+}
+
+#about a:visited
+{
+    color:#2f9c49;
+}
+
+#about a:hover
+{
     color:#fff;
 }
+
 
 #about h2
 {
